--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.properties.hibernate.default_schema=yescience
 
 server.servlet.context-path=/yescience/api
+server.port=8081
